syntax = "proto3";
package spray;

message Message {
  oneof type {
    uint32 shouldAdd = 1;

    Sample exchangeInit = 2;

    Sample exchangeResp = 3;

    uint32 connectTo = 4;

    Peers connectedTo = 5;

    uint32 joinedPeerId = 6;

    uint32 joinedPeerIdFinished = 7;
  }
}

message Sample {
  repeated uint32 sample = 1;
}

message Peers {
  repeated uint32 peers = 1;
}
